[tool.poetry]
name = "conductor-flows"
version = "0.1.0"
description = "Orchestration workflows for Conductor"
authors = ["csmizzle <chrissmith700@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
prefect = "^2.18.3"
requests = "^2.31.0"
polling2 = "^0.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
vcrpy = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
